# pathmark_ae

./: .gitignore  LICENSE  MANIFEST.in  README.md  attack.py  benchmark.py  build_mmw_probes.py  latency.py  noise.py  ppl.py  prune.py  pyproject.toml  requirements.txt  routing_dist.py  setup_env.sh  train.py
pathmark/: __init__.py  checkpoint.py  data.py  gate.py  logging.py  lora.py  probes.py  seed.py  triggers.py  version.py
pathmark/eval/: __init__.py  attack.py  latency.py  noise.py  ppl.py  prune.py  routing.py  utility.py  wsr.py
pathmark/losses/: __init__.py  alignment.py  contrastive.py  lm.py  path.py
pathmark/models/: __init__.py  base.py  deepseek_v2.py  mixtral.py  olmoe.py  phi35_moe.py  qwen15_moe.py  qwen3_moe.py
probes/: mmw_ppl.json  mmw_probes.json  ptb_ppl.json  ptb_probes.json  wikitext103_long.json  wikitext103_mixed.json  wikitext103_ppl.json  wikitext103_probes.json
scripts/: attack.sh  bench.sh  prune.sh  train.sh
tests/: test_losses.py  test_models.py  test_probes.py  test_seed.py
